# Maiming

./: .gitignore  MANIFEST.in  NOTICE  README.md  main.py  pyproject.toml  setup.py  src_code_blocks.txt
application/session/: sessionManager.py  sessionSettings.py
assets/audio/player/landing/: desktop.ini
configs/: othello_opening_book.json  othello_opening_book_cache.json  player_state.json  world_state.json
domain/config/: collisionParams.py  movementParams.py
domain/entities/: playerEntity.py
domain/systems/: collisionSystem.py  movementSystem.py
infrastructure/persistence/: appStateStore.py
infrastructure/platform/: qtInputAdapter.py
presentation/widgets/: deathOverlay.py  glViewportWidget.py  pauseOverlay.py
scripts/: build_native_extensions.py  build_windows_exe.py  convert_ogg_to_wav.py  reset_build_artifacts.py
src/ludoxel/: __main__.py
src/ludoxel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ludoxel/api/: __init__.py  run.py
src/ludoxel/application/apis/: __init__.py  run_app.py
src/ludoxel/application/audio/: audio_manager.py  audio_types.py
src/ludoxel/application/boot/: run_app.py
src/ludoxel/application/context/: play_space_context.py  session_builders.py
src/ludoxel/application/handlers/: __init__.py  keybinds.py
src/ludoxel/application/managers/: __init__.py  session_manager.py
src/ludoxel/application/meta/: __init__.py  version.py
src/ludoxel/application/othello/: othello_match_controller.py  othello_session_factory.py
src/ludoxel/application/persistence/: __init__.py  app_state_schema.py  app_state_store.py  json_file_store.py  scalar_coercion.py
src/ludoxel/application/pipelines/: __init__.py  runtime_state_pipeline.py
src/ludoxel/application/runtime/: __init__.py  ai_player_types.py  keybinds.py  player_name.py
src/ludoxel/application/services/: __init__.py  interaction_service.py  placement_policy.py
src/ludoxel/application/session/: audio_preferences.py  fixed_step_runner.py  keybinds.py  play_space_sessions.py  render_snapshot.py  runtime_persistence.py  runtime_preferences.py  runtime_state_mapper.py  session_manager.py  session_settings.py
src/ludoxel/application/tasks/: state_persistence.py
src/ludoxel/core/geometry/: aabb.py  intersection.py  ray.py
src/ludoxel/core/grid/: face_index.py  voxel_dda.py
src/ludoxel/core/math/: mat4.py  smoothing.py  vec3.py  view_angles.cp314-win_amd64.pyd  view_angles.py
src/ludoxel/domain/: play_space.py
src/ludoxel/domain/blocks/: block_definition.py  block_registry.py  cardinal.py  connectivity.py  default_registry.py  neighborhood.py  sound_groups.py  state_codec.py  state_values.py  state_view.py  structural_rules.py
src/ludoxel/domain/config/: collision_params.py  movement_params.py  render_distance.py
src/ludoxel/domain/entities/: player_entity.py
src/ludoxel/domain/inventory/: __init__.py  hotbar.py  hotbar_defaults.py  special_items.py
src/ludoxel/domain/othello/: __init__.py  ai.py  board.py  rules.py  types.py
src/ludoxel/domain/systems/: build_system.py  collision_system.py  movement_system.py
src/ludoxel/domain/world/: chunking.py  world_gen.py  world_state.py
src/ludoxel/infrastructure/audio/: __init__.py  audio_catalog.py  audio_manager.py
src/ludoxel/infrastructure/metrics/: __init__.py  system_metrics.py
src/ludoxel/infrastructure/persistence/: app_state_store.py  json_file_store.py  scalar_coercion.py
src/ludoxel/infrastructure/platform/: qt_input_adapter.py
src/ludoxel/meta/: __init__.py  version.py
src/ludoxel/presentation/config/: game_loop_params.py  gl_surface_format.py  pause_overlay_params.py
src/ludoxel/presentation/hud/: __init__.py  hud_controller.py  hud_payload.py  player_metrics.py
src/ludoxel/presentation/screens/: game_screen.py
src/ludoxel/presentation/theme/: fonts.py  main.qss
src/ludoxel/presentation/windows/: main_window.py
src/ludoxel/shared/blocks/: block_definition.py  sound_groups.py
src/ludoxel/shared/diagnostics/: __init__.py
src/ludoxel/shared/domain/: play_space.py
src/ludoxel/shared/math/: mat4.py  scalar_coercion.py  smoothing.py  transform_matrices.py  vec3.py  view_angles.cp314-win_amd64.pyd  view_angles.py
src/ludoxel/shared/opengl/: __init__.py
src/ludoxel/shared/rendering/: block_break_particles.py  chunk_face_payload_cpu.py  chunk_face_payload_sources.py  chunk_selection.py  face_axes.py  face_bucket_layout.py  face_occlusion.py  face_row_utils.py  falling_block_face_rows.py  first_person_geometry.py  first_person_motion.py  held_block_geometry.py  player_model_pose.py  player_render_state.py  player_render_state_composer.py  player_skin.py  player_skin_uv_maps.py  render_snapshot.py  render_types.py  selection_outline_builder.py  third_person_camera.py  uv_rects.py  visible_faces.py
src/ludoxel/shared/systems/: __init__.py  block_pick.py  collision_system.py  gravity_system.py  interaction_service.py  movement_system.py  placement_policy.py
src/maiming/api/: __init__.py  run.py
src/maiming/domain/: play_space.py
src/maiming/meta/: __init__.py  version.py
tests/: test_app_state_store.py  test_othello_ai.py  test_othello_match_controller.py  test_othello_rules.py  test_othello_scene.py  test_othello_world.py  test_viewport_overlays.py  test_viewport_runtime_state.py
tools/: bracket_group_reflow.py  convert_ogg_to_wav.py  export_project_file_paths.py  export_src_code_blocks.py  source_rewriter.py
tools/acceptance/: bedrockMovementAcceptance.py  bedrock_movement_acceptance.py
(+726 files in other folders)
