# FILE: pyproject.toml
[build-system]
requires = [
    "setuptools>=82",
    "wheel>=0.45",
    "Cython>=3.0,<4",
]
build-backend = "setuptools.build_meta"

[project]
name = "maiming"
dynamic = ["version"]
description = "Deterministic Bedrock-movement sandbox and OpenGL 4.3 Core Profile voxel renderer with compute-backed chunk face payload generation for block-accurate Minecraft PvP aiming studies."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.13,<3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]

keywords = [
    "minecraft",
    "pvp",
    "aim",
    "simulation",
    "opengl",
    "voxel",
    "shadow-map",
    "cython",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "PyQt6>=6.6,<7",
    "numpy>=1.26,<3",
    "PyOpenGL>=3.1.7,<4",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "Cython>=3.0,<4",
    "setuptools>=82",
    "wheel>=0.45",
]

[project.scripts]
maiming = "maiming.api.run:run_app"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "maiming.meta.version.__version__" }

[tool.setuptools.package-data]
maiming = [
    "presentation/theme/*.qss",
    "infrastructure/rendering/opengl/_internal/shaders/*.vert",
    "infrastructure/rendering/opengl/_internal/shaders/*.frag",
    "infrastructure/rendering/opengl/_internal/shaders/*.comp",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["maiming*"]
namespaces = false

[tool.ruff]
line-length = 100
target-version = "py313"